<?xml version="1.0"?>
<package format="2">
  <name>phoenix1_bringup</name>
  <version>0.0.0</version>
  <description>The phoenix1_bringup package</description>

  <maintainer email="j.echavarria@ai-systems.ca">Juan Echavarria</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>sick_scan</depend>
  <depend>laser_filters</depend>
  <depend>rosserial_python</depend>
  <depend>tf2_web_republisher</depend>
  <depend>rosbridge_server</depend>
  <depend>robot_state_publisher</depend>
  <depend>tmux</depend>
  <depend>phoenix_msgs</depend>
  <depend>robot_localization</depend>
  <depend>slam_toolbox</depend>
  <depend>tf2</depend>
  <depend>ira_laser_tools</depend>

</package>
